# PORTWATCH

./: .gitignore  BACKLOG.md  CONTRACT.md  DECISIONS.md  LICENSE  Makefile  PHASE_1A.md  PHASE_1A_REPORT.md  PHASE_1B_REPORT.md  PHASE_1C_REPORT.md  PHASE_1D_REPORT.md  PHASE_1E_REPORT.md  PHASE_1F_REPORT.md  PHASE_1G_REPORT.md  PHASE_2A.md  PHASE_2A_REPORT.md  PHASE_2B.md  PHASE_2B_REPORT.md  README.md  pyproject.toml
.github/workflows/: ci.yml
portwatch/: app.py  cli.py  diff.py  loop.py  proc.py  process.py  snapshot.py
portwatch/widgets/: __init__.py  blades.py  chip.py
tests/: __init__.py  conftest.py  test_app.py  test_diff.py  test_loop.py  test_proc.py  test_process.py  test_snapshot.py
tests/fixtures/: proc_net_tcp6_basic.txt  proc_net_tcp6_malformed.txt  proc_net_tcp_basic.txt  proc_net_tcp_empty.txt  proc_net_tcp_malformed.txt  proc_net_tcp_mixed.txt  proc_net_udp6_basic.txt  proc_net_udp_basic.txt
